# modules/apps/commerce/headless/headless-commerce/headless-commerce-delivery-cart-impl/rest-openapi.yaml
@@ -177,6 +177,9 @@ components:
                 orderStatusInfo:
                     $ref: "#/components/schemas/Status"
                     readOnly: true
+                orderType:
+                    readOnly: true
+                    type: string
                 orderTypeExternalReferenceCode:
                     example: AB-34098-789-N
                     type: string
@@ -341,6 +344,9 @@ components:
                     readOnly: true
                     type: boolean
                 thumbnail:
+                    readOnly: true
+                    type: string
+                unitOfMeasure:
                     readOnly: true
                     type: string
                 valid:
@@ -610,7 +616,7 @@ components:
 info:
     description:
         "Headless Delivery Commerce Cart API. A Java client JAR is available for use with the group ID 'com.liferay',
-        artifact ID 'com.liferay.headless.commerce.delivery.cart.client', and version '4.0.42'."
+        artifact ID 'com.liferay.headless.commerce.delivery.cart.client', and version '4.0.43'."
     license:
         name: Apache 2.0
         url: http://www.apache.org/licenses/LICENSE-2.0.html
